--- a/style.css
+++ b/style.css
@@ -241,7 +241,9 @@ figcaption {
   margin: 10px 0;
   line-height: 25px;
 }
-
+article img {
+  max-width: 100%;
+}
 #about,
 #portfolio {
   margin: 0 20px;
@@ -258,7 +260,7 @@ figcaption {
 }
 #portfolio article {
   border-bottom: 1px solid #f4f4f4;
-  padding-bottom: 20px;
+  /* padding-bottom: 20px; */
 }
 #portfolio article:last-child {
   border-bottom: transparent;
@@ -367,6 +369,7 @@ button:hover {
 #greenLeaf {
   margin: 0 20px;
 }
+
 #greenLeaf strong {
   font-weight: 700;
 }
@@ -376,12 +379,16 @@ button:hover {
   padding-bottom: 10px;
   line-height: 25px;
 }
+#travelPage {
+  margin: 0 20px;
+}
 
 /* Diabetes Education Styles */
 #diabetesPage {
   margin: 10px 20px 0;
 }
 #greenLeaf h1,
+#travelPage h1,
 #diabetesPage h1 {
   text-align: left;
   font-weight: 700;
@@ -439,9 +446,6 @@ article img {
   font-size: 1.1rem;
   margin-bottom: 10px;
 }
-#imagesCombined img {
-  margin-bottom: 10px;
-}
 
 /* Media Query Styles */
 @media screen and (min-width: 600px) {
@@ -488,6 +492,9 @@ article img {
     border-bottom: none;
     padding: 0;
   }
+  nav li a:hover {
+    text-decoration: underline;
+  }
   h1 {
     font-size: 1.5rem;
     margin: 210px 0;
@@ -497,14 +504,6 @@ article img {
     font-weight: 700;
     color: var(--primary-color);
     font-size: 1.7rem;
-  }
-  #portfolio {
-    margin: 0 auto;
-    width: 90vw;
-    display: grid;
-    grid-template-columns: auto auto;
-    grid-template-rows: repeat(5, auto);
-    gap: 10px;
   }
 
   #portfolio img {
@@ -521,45 +520,12 @@ article img {
   #nikeCaseStudy h2 {
     margin-top: 20px;
   }
-  #imagesCombined {
-    display: grid;
-    grid-template-columns: auto auto;
-    gap: 20px;
-  }
 
   #portfolio article {
     padding-bottom: 0;
     border-bottom: 0;
   }
-  #portfolio h2 {
-    grid-column: 1/-1;
-    grid-row: 1/2;
-  }
-  #portfolio h3 {
-    margin: 0;
-    padding-bottom: 20px;
-  }
-  #fairyBook {
-    grid-column: 1/2;
-    grid-row: 3/5;
-  }
-  #diabetes {
-    grid-column: 1/-1;
-    grid-row: 2/3;
-    padding-bottom: 0;
-  }
-  #easyBank {
-    grid-column: 1/-1;
-    grid-row: 5/-1;
-  }
-  #nikeAd {
-    grid-column: 2/-1;
-    grid-row: 3/4;
-  }
-  #printDesign {
-    grid-column: 2/-1;
-    grid-row: 4/5;
-  }
+
   header div,
   #introduction,
   #contact,
@@ -576,6 +542,7 @@ article img {
   #diabetesPage,
   #lunaFairy,
   #nikeCaseStudy,
+  #travelPage,
   #contact,
   #about,
   #greenLeaf {
@@ -583,13 +550,55 @@ article img {
     margin: 0 auto;
   }
 }
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 1000px) {
+  #portfolio {
+    margin: 0 auto;
+    width: 90vw;
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    grid-template-rows: repeat(3, auto);
+    gap: 30px;
+  }
+  #portfolio h2 {
+    grid-column: 1/-1;
+    grid-row: 1/2;
+  }
+  #portfolio h3 {
+    margin: 0;
+    padding-bottom: 20px;
+  }
+  #diabetes {
+    grid-column: 1/2;
+    grid-row: 2/3;
+  }
+  #easyBank {
+    grid-column: 2/3;
+    grid-row: 2/3;
+  }
+  #fairyBook {
+    grid-column: 3/-1;
+    grid-row: 2/3;
+  }
+  #nikeAd {
+    grid-column: 1/2;
+    grid-row: 3/-1;
+  }
+  #greenleaf {
+    grid-column: 2/3;
+    grid-row: 3/-1;
+  }
+  #travel {
+    grid-column: 3/-1;
+    grid-row: 3/-1;
+  }
+
   #introduction,
   header div,
   #portfolio,
   #diabetesPage,
   #lunaFairy,
   #nikeCaseStudy,
+  #travelPage,
   #contact,
   #about,
   #greenLeaf {
